--- a/html/fbforgotten.html
+++ b/html/fbforgotten.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1><i>Forgot your Password?</i></h1>
-    <h1><i>Seems like you problem.hehehe</i></h1>
+    <h1><i>Seems like you problem.hahaha.hehe</i></h1>
 </body>
 </html>
